--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://raw.githubusercontent.com/boundary-x/ai_teachable_machine/refs/heads/main/Favicon.png"/> 
   <link rel="X-icon" href="https://raw.githubusercontent.com/boundary-x/ai_teachable_machine/refs/heads/main/Favicon.png"/> 
-  <title>바운더리엑스 AI 포즈인식</title>
+  <title>BoundaryX AI Pose Recognition</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
@@ -18,51 +18,51 @@
 </head>
 
 <body>
-  <!-- 헤더 -->
+  <!-- Header -->
   <header>
     <div class="title">
       <img src="https://raw.githubusercontent.com/boundary-x/ai_pose_classification/refs/heads/main/boundaryx_logo.png" alt="Logo">
-      AI 포즈인식
+      AI Pose Recognition 🙆
     </div>
-    <a href="https://boundaryx.io/" class="back-button">돌아가기</a>
+    <a href="https://boundaryx.io/" class="back-button">Go Back</a>
   </header>
 
-  <!-- 메인 컨텐츠 -->
+  <!-- Main Content -->
   <main>
     <div id="p5-container" class="canvas-container"></div>
     <section class="controls">
       <div class="control-group">
-        <h3>📡 블루투스 연결</h3>
-        <p>☝️STEP1 - 블루투스 연결 버튼을 클릭해 마이크로비트를 연결해주세요</p>
-        <div id="bluetoothStatus" class="status">상태: Disconnected</div>
+        <h3>📡 Bluetooth Connection</h3>
+        <p>☝️STEP1 - Click the Bluetooth connection button to pair your micro:bit</p>
+        <div id="bluetoothStatus" class="status">Status: Disconnected</div>
         <div id="bluetooth-control-buttons" class="button-group"></div>
       </div>
       <div class="control-group">
-        <h3>🛠️ 포즈 모델 로드</h3>
-        <p>✌️STEP2 - 모델을 선택하거나 모델 주소를 입력해 모델을 준비해주세요</p>
+        <h3>🛠️ Load Pose Model</h3>
+        <p>✌️STEP2 - Select a model or enter its URL to load</p>
         <div id="model-select-and-link" class="model-selection">
           <select id="modelSelect"></select>
-          <a href="https://boundaryx.io" target="_blank">모델 분류 데이터 보기</a>
+          <a href="https://boundaryx.io" target="_blank">View model dataset</a>
         </div>
         <div id="model-key-container" class="model-key">
-          <label for="modelInput">🔑 모델 키:</label>
-          <input type="text" id="modelInput" placeholder="모델 키 입력">
+          <label for="modelInput">🔑 Model key:</label>
+          <input type="text" id="modelInput" placeholder="Enter model key">
         </div>
       </div>
       <div class="control-group">
-        <h3>⚙️ 분류 제어</h3>
-        <p>👌STEP3 - 모델 로드 버튼을 클릭해 포즈 분류를 시작하세요</p>
+        <h3>⚙️ Classification Control</h3>
+        <p>👌STEP3 - Click the load button to start pose classification</p>
         <div id="model-action-buttons" class="button-group"></div>
       </div>
     </section>
   </main>
 
-  <!-- 푸터 -->
+  <!-- Footer -->
   <footer>
     <p>ⓒ 2024. boundary X Co. All rights reserved.</p>
   </footer>
 
-  <!-- 스크립트 연결 -->
+  <!-- Scripts -->
   <script src="sketch.js"></script>
   <script>
     document.querySelector('.back-button').addEventListener('click', () => {
